# Dream-mind-lucid

./: .env  .env.example  .env.sample  .gitignore  AI_AGENT_README.md  ARCHITECTURE.md  Anchor.toml  COMPLETE_DEPLOYMENT_ANALYSIS.json  COMPLETE_DEPLOYMENT_ANALYSIS.md  CRYPTOGENE-2089.md  Cargo.toml  Copilot-Guide-dream-mind-lucid.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SCAN_REPORT.json  DEPLOYMENT_SCAN_REPORT.md  DEPLOYMENT_SUCCESS.md  Deployer wallet 0xE38FB59ba3AEAbE2AD0f6FB7Fb84453F6d145D23  Dockerfile  FINAL_MAINNET_DEPLOYMENT_REPORT.md  GALACTIC_ROADMAP_2026.md  GROK_COPILOT_README.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  JSON  MINT_GENE_DEPLOYMENT.md  MISSION_COMPLETE.md  OMEGA_PRIME_README.md  README.md  SOLANA_MIGRATION.md  UNIFIED_README.md  UPDATE_README.md  ZERO_COST_DEPLOYMENT.md  blockchain_explorer_integration.py  check_balance.py  copilot-instruction.md  copilot-instruction.py  copilot-lucid-agent.ts  demo_ai_agent.py  demo_iwho_me.py  (+47 more)
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh  readme_devcontainer.md
.github/: copilot-instructions.md
agents/: address_manager.py  iem_looter.py  iem_syndicate.py  performance_monitor.py  solana_dream_agent.py  solana_dream_syndicate.py  token_distribution.py
browser-extension/: content.js  manifest.json
config/: agent_addresses.json
consensus/: CMakeLists.txt  README.md
consensus/include/: AgentRegistry.h  DreamConsensus.h
consensus/src/: AgentRegistry.cpp  DreamConsensus.cpp
contracts/: DreamEconomicEngine.sol  DreamGovernance.sol  DreamPerformanceDistributor.sol  DreamPriceOracle.sol  DreamStaking.sol  DreamTokenDistributor.sol  IEMDreams.sol  LucidAccess.sol  LucidToken.sol  OneiroSphere.sol  OneirobotNFT.sol  SMindToken.sol
dashboard/: dex_liquidity.py  dream_dashboard.py  dream_data_collector.py  dream_technical_analyst.py  dream_visualizer.py  liquidity_client.py  liquidity_monitor.py  liquidity_websocket.py  requirements.txt
deployments/: skale_testnet.json
docs/: _config.yml  index.html
dream-deploy/: deploy.py  deploy_program.py
dream-test/: deploy.py  deploy2.py  deploy3.py  deploy4.py  deploy_all_chains.py  deploy_calypso.py  deploy_calypso_mainnet.py  deploy_calypso_minimal.py  deploy_controller.py  deploy_europa.py  deploy_europa_eip1559.py  deploy_mainnet.py  deploy_multi.py  deploy_proxy.py  deploy_skale_optimized.py  deploy_test.py  deploy_test_skale.py  interact.py  renounce_ownership.py  test.py  verify.py  verify_contracts.py
evm/: README.md  README_EVM.md  hardhat.config.js  package-lock.json  package.json
frontend/: package.json
marionette/: DreamMarionette.sol  DreamMarionetteFactory.sol  DreamMarionetteProxy.sol
oneiroagent/: agent.py  requirements.txt  submit_block.py
programs/dream-mind-lucid/: Cargo.toml
programs/dream-mind-lucid/src/: lib.rs
solana/programs/: Cargo.toml
solana/programs/src/: lib.rs  oneirobot_nft.rs
(+60 files in other folders)
