[package]
name = "dream-mind-lucid"
version = "0.1.0"
description = "Dream-Mind-Lucid Solana Program with SPL Token 2022 and MEV Protection"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dream_mind_lucid"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
spl-token = "4.0.0"
spl-token-2022 = "1.0.0"
spl-associated-token-account = "2.2.0"
solana-program = "1.17.0"
mpl-token-metadata = "3.2.0"