[package]
name = "dream-mind-lucid"
version = "0.1.0"
edition = "2021"
description = "Solana program for Dream-Mind-Lucid dream recording and token management"

[dependencies]
solana-program = "=2.3.0"
borsh = "^1.5.5"
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []